I add a new Computer

--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -48,7 +48,13 @@
                                                 </Style.Triggers>
                                             </Style>
                                         </Grid.Style>
-                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" >
+                                            <ContentPresenter.Resources>
+                                                <Style TargetType="{x:Type TextBlock}">
+                                                    <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+                                                </Style>
+                                            </ContentPresenter.Resources>
+                                            </ContentPresenter>
                                     </Grid>
                                 </Border>
                             </Border>
@@ -137,6 +143,8 @@
         <Setter Property="Background" Value="DarkGreen" />
         <Setter Property="Height" Value="60" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -153,7 +161,11 @@
                                 </Style>
                             </StackPanel.Style>
                             <ContentPresenter>
-
+                                <ContentPresenter.Resources>
+                                    <Style TargetType="{x:Type TextBlock}">
+                                        <Setter Property="TextWrapping" Value="Wrap"/>
+                                    </Style>
+                                </ContentPresenter.Resources>
                             </ContentPresenter>
                         </StackPanel>
                     </Border>
@@ -162,6 +174,7 @@
         </Setter>
 
     </Style>
+    
     <ControlTemplate x:Key="ListBoxModuleTemplate" TargetType="{x:Type ListBoxItem}">
         <Grid HorizontalAlignment="Left" Height="190" Margin="0,0,-80,0" VerticalAlignment="Top" Width="auto"
               Background="#FFC5C2C2">
@@ -188,7 +201,6 @@
         </Grid>
     </ControlTemplate>
 
-
     <Style x:Key="HistoryDocumentWrapPanel" TargetType="ListBoxItem">
         <Setter Property="FontSize" Value="22" />
         <Setter Property="Foreground" Value="Black" />
@@ -200,7 +212,7 @@
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                     <WrapPanel>
                         <WrapPanel.Style>
-                            <Style TargetType="StackPanel">
+                            <Style TargetType="WrapPanel">
                                 <Style.Triggers>
                                     <Trigger Property="StackPanel.IsMouseOver" Value="True">
                                         <Setter Property="Background" Value="DarkGreen" />
@@ -246,25 +258,26 @@
         <Setter Property="Background" Value="#FF167423"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="5"/>
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
-        
+        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                     <Grid Margin="0,5,5,0" Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF167423">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="300"/>
+                            <ColumnDefinition Width="130"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <Border BorderBrush="#FF169516" Grid.Column="0" Grid.Row="0" Grid.RowSpan="1" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
-                                Height="120" Margin="2,6.7,3,2"  Width="auto">
-                            <Button x:Name="FirstContentButton" FontSize="12" BorderBrush="#FF167423" Background="#FF167423" Foreground="#FFF7F3F3" Margin="0,0,0,0">
-                                <WrapPanel Width="auto" Height="auto" >
-                                    <ContentPresenter/>
-                                </WrapPanel>
-                            </Button>
+                        <Border BorderBrush="#FF169516" Grid.Column="0" Grid.Row="0" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
+                                Height="120" Margin="2,6.7,3,2">
+                            <ContentPresenter>
+                                <ContentPresenter.Resources>
+                                    <Style TargetType="{x:Type TextBlock}">
+                                        <Setter Property="TextWrapping" Value="Wrap"/>
+                                    </Style>
+                                </ContentPresenter.Resources>
+                            </ContentPresenter>
                         </Border>
-                        <Border BorderBrush="#FF167423" BorderThickness="0,0,0,2" Background="WhiteSmoke" Grid.Column="1" HorizontalAlignment="Stretch" Height="124.7" Margin="2,0,0,0" 
+                        <!--<Border BorderBrush="#FF167423" BorderThickness="0,0,0,2" Background="WhiteSmoke" Grid.Column="1" HorizontalAlignment="Stretch" Height="124.7" Margin="2,0,0,0" 
                                 VerticalAlignment="Top" Width="auto" Grid.ColumnSpan="1">
                             <ListBox x:Name="Category"  ScrollViewer.PanningMode="HorizontalOnly" ScrollViewer.VerticalScrollBarVisibility="Hidden" 
                                      ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" 
@@ -276,9 +289,9 @@
                                 </ListBox.ItemsPanel>
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
-                                        <TextB></TextB>
+                                        <ContentPresenter/>
                                     </DataTemplate>
-                                </ListBox.ItemTemplate>
+                                </ListBox.ItemTemplate>-->
                                 
                                 
                                 <!-- Надо их динамически генерить как-то -->
@@ -286,120 +299,52 @@
                                     <ContentPresenter />
                                 </ListBoxItem>-->
  
-                            </ListBox>
-                        </Border>
+                            <!--</ListBox>
+                        </Border>-->
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    
-    
-    <!--<Style x:Key="SecondListBox" TargetType="ListBox">
-        <Setter Property="ScrollViewer.PanningMode" Value="HorizontalOnly" />
-        <Setter Property="Template">
-            <Setter.Value>
-        <ListBox x:Name="MainListBoxInWindowShell" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="{DynamicResource AccentColorBrush}">
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-            --><!-- Сюда будут добавляться Item'ы --><!--
-            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                <ContentPresenter />
-            </ListBoxItem>
-            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                <ContentPresenter />
-            </ListBoxItem>
-            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                <ContentPresenter />
-            </ListBoxItem>
-            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                <ContentPresenter />
-            </ListBoxItem>
-            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                <ContentPresenter />
-            </ListBoxItem>
-            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                <ContentPresenter />
-            </ListBoxItem>
-            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                <ContentPresenter />
-            </ListBoxItem>
-            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
+
+    <!--<ListBox x:Name="Category"    Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" 
+                                     Background="{DynamicResource AccentColorBrush}" ItemContainerStyle="{DynamicResource TwoLevel}">
+        <ListBox.ItemsPanel>sss
+            <ItemsPanelTemplate>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            </ItemsPanelTemplate>
+        </ListBox.ItemsPanel>
+        <ListBox.ItemTemplate>
+            <DataTemplate>
                 <ContentPresenter/>
-            </ListBoxItem>
-        </ListBox>
-            </Setter.Value>
-        </Setter>
-    </Style>-->
+            </DataTemplate>
+        </ListBox.ItemTemplate>-->
 
-    <!-- ХЗ что снизу серьёзно ..-->
-
-    <!--<Style x:Key="ListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
-        <Setter Property="SnapsToDevicePixels" Value="True"/>
-        <Setter Property="Padding" Value="4,1"/>
-        <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-        <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+    <Style x:Key="SecondListBox" TargetType="ListBox">
+        <Setter Property="ScrollViewer.PanningMode" Value="HorizontalOnly" />
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden"/>
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+        <Setter Property="Margin" Value="0,0,0,0"/>
+        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+        <Setter Property="Background" Value="{DynamicResource AccentColorBrush}"/>
+        <Setter Property="ItemContainerStyle" Value="{DynamicResource StyleTwoLevelListboxItem}"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                    <ControlTemplate.Triggers>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="IsMouseOver" Value="True"/>
-                            </MultiTrigger.Conditions>
-                        </MultiTrigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="Selector.IsSelectionActive" Value="False"/>
-                                <Condition Property="IsSelected" Value="True"/>
-                            </MultiTrigger.Conditions>
-                        </MultiTrigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="Selector.IsSelectionActive" Value="True"/>
-                                <Condition Property="IsSelected" Value="True"/>
-                            </MultiTrigger.Conditions>
-                        </MultiTrigger>
-                        <Trigger Property="IsEnabled" Value="False"/>
-                    </ControlTemplate.Triggers>
+                <ControlTemplate>
+                    <ListBox x:Name="MainListBoxInWindowShell" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="{DynamicResource AccentColorBrush}">
+                        <ListBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                            </ItemsPanelTemplate>
+                        </ListBox.ItemsPanel>
+                    </ListBox>
                 </ControlTemplate>
+
             </Setter.Value>
         </Setter>
-    </Style>-->
+    </Style>
 
-    <!-- Шаблон Элемента отображения для  ListBoxItem'a вложенном в листбоксе-->
-
-    <!--<Style x:Key="Need" TargetType="ListBoxItem">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                        </Grid.RowDefinitions>
-                        <Button Grid.ColumnSpan="2" Grid.RowSpan="3"  Width="170" Height="Auto" Margin="5,0,0,5" Background="#FF167423" Foreground="White">
-                            <ContentPresenter x:Name="ContentTwoLevel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-                        </Button>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>   
-    </Style>-->
-    <Style x:Key="TwoLevel" TargetType="{x:Type ListBoxItem}">   
+    <Style x:Key="StyleTwoLevelListboxItem" TargetType="{x:Type ListBoxItem}">   
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
@@ -415,16 +360,7 @@
                             <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
                         <Button Grid.ColumnSpan="2" Grid.RowSpan="3"  Width="170" Height="Auto" Margin="5,0,0,5" FontSize="22" Background="#FF167423" Foreground="White">
-                            <!--<Button.Style>
-                    <Style>
-                        <Style.Triggers>
-                            <Trigger Property="Control.IsEnabled" Value="True">
-                                <Setter Property="Control.Background" Value="{StaticResource AccentColorBrush}"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>-->
-                            <ContentPresenter x:Name="ContentTwoLevel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                            <ContentPresenter/>
                         </Button>
                     </Grid>
                 </ControlTemplate>
@@ -432,21 +368,6 @@
         </Setter>
     </Style>
     
-    <DataTemplate x:Key="MainViewsOfTwoLevelItems">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <Button Grid.ColumnSpan="2" Grid.RowSpan="3"  Width="170" Height="Auto" Margin="5,0,0,0" Background="#FF167423" Foreground="White">
-            </Button>
-        </Grid>
-    </DataTemplate>
+   
 
 </ResourceDictionary>
