--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -71,16 +71,12 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
                        
-                        <Button Grid.Column="0" cal:Message.Attach="[Event Click] = [Action OpenModule($this)]">
+                        <Button cal:Message.Attach="[Event Click] = [Action OpenModule($this)]">
                             <TextBlock Text="{Binding Name}" />
                         </Button>
                         
-                        <TextBlock Grid.Column="1" Text="{Binding Description}"></TextBlock>
+                        <!--<TextBlock Grid.Column="1" Text="{Binding Description}"></TextBlock>-->
                         <!--<ListBox x:Name="Category">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
