--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -54,7 +54,7 @@
                                                     <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
                                                 </Style>
                                             </ContentPresenter.Resources>
-                                            </ContentPresenter>
+                                        </ContentPresenter>
                                     </Grid>
                                 </Border>
                             </Border>
@@ -174,7 +174,7 @@
         </Setter>
 
     </Style>
-    
+
     <ControlTemplate x:Key="ListBoxModuleTemplate" TargetType="{x:Type ListBoxItem}">
         <Grid HorizontalAlignment="Left" Height="190" Margin="0,0,-80,0" VerticalAlignment="Top" Width="auto"
               Background="#FFC5C2C2">
@@ -267,23 +267,49 @@
                             <ColumnDefinition Width="130"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <Border BorderBrush="#FF169516" Grid.Column="0" Grid.Row="0" Grid.RowSpan="1" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
-                                Height="120" Margin="2,6.7,3,2"  Width="auto">
-                            <Button x:Name="FirstContentButton" FontSize="12" BorderBrush="#FF167423" Background="#FF167423" Foreground="#FFF7F3F3" Margin="0,0,0,0">
-                                <WrapPanel Width="auto" Height="auto" >
-                                    <ContentPresenter Content="{Binding Name}"/>
-                                </WrapPanel>
-                            </Button>
+                        <Border BorderBrush="#FF169516" Grid.Column="0" Grid.Row="0" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
+                                Height="120" Margin="2,6.7,3,2">
+                            <ContentPresenter>
+                                <ContentPresenter.Resources>
+                                    <Style TargetType="{x:Type TextBlock}">
+                                        <Setter Property="TextWrapping" Value="Wrap"/>
+                                    </Style>
+                                </ContentPresenter.Resources>
+                            </ContentPresenter>
                         </Border>
-                       <TextBlock Foreground="White" FontSize="22" Grid.Column="1">
-                       <ContentPresenter Content="{Binding Description}"></ContentPresenter>    
-                       </TextBlock>
+                        <TextBlock Grid.Column="1" FontSize="22" Foreground="White" >
+                            <ContentPresenter Content="{Binding Description}"></ContentPresenter>
+                        </TextBlock>
+                        <!--<Border BorderBrush="#FF167423" BorderThickness="0,0,0,2" Background="WhiteSmoke" Grid.Column="1" HorizontalAlignment="Stretch" Height="124.7" Margin="2,0,0,0" 
+                                VerticalAlignment="Top" Width="auto" Grid.ColumnSpan="1">
+                            <ListBox x:Name="Category"  ScrollViewer.PanningMode="HorizontalOnly" ScrollViewer.VerticalScrollBarVisibility="Hidden" 
+                                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" 
+                                     Background="{DynamicResource AccentColorBrush}" ItemContainerStyle="{DynamicResource TwoLevel}">
+                                <ListBox.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                                    </ItemsPanelTemplate>
+                                </ListBox.ItemsPanel>
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <ContentPresenter/>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>-->
+
+
+                        <!-- Надо их динамически генерить как-то -->
+                        <!--<ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
+                                    <ContentPresenter />
+                                </ListBoxItem>-->
+
+                        <!--</ListBox>
+                        </Border>-->
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <!--<ListBox x:Name="Category"    Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" 
                                      Background="{DynamicResource AccentColorBrush}" ItemContainerStyle="{DynamicResource TwoLevel}">
         <ListBox.ItemsPanel>sss
@@ -296,7 +322,7 @@
                 <ContentPresenter/>
             </DataTemplate>
         </ListBox.ItemTemplate>-->
-    
+
     <Style x:Key="SecondListBox" TargetType="ListBox">
         <Setter Property="ScrollViewer.PanningMode" Value="HorizontalOnly" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden"/>
@@ -308,20 +334,20 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-        <ListBox x:Name="MainListBoxInWindowShell" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="{DynamicResource AccentColorBrush}">
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-        </ListBox>
+                    <ListBox x:Name="MainListBoxInWindowShell" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="{DynamicResource AccentColorBrush}">
+                        <ListBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                            </ItemsPanelTemplate>
+                        </ListBox.ItemsPanel>
+                    </ListBox>
                 </ControlTemplate>
 
             </Setter.Value>
         </Setter>
     </Style>
 
-    <Style x:Key="StyleTwoLevelListboxItem" TargetType="{x:Type ListBoxItem}">   
+    <Style x:Key="StyleTwoLevelListboxItem" TargetType="{x:Type ListBoxItem}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
@@ -344,7 +370,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
-   
+
+
 
 </ResourceDictionary>
