--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -262,7 +262,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                    <Grid Margin="1" Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="#FF167423">
+                    <Grid Margin="1" Width="auto" Height="auto"  Background="#FF167423">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="135"/>
                             <ColumnDefinition/>
@@ -274,9 +274,9 @@
                                 <ContentPresenter.Resources>
                                     <Style TargetType="{x:Type TextBlock}">
                                         <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
-                                        <Setter Property="HorizontalAlignment" Value="Right"/>
+                                        <Setter Property="HorizontalAlignment" Value="Center"/>
                                         <Setter Property="VerticalAlignment" Value="Center"/>
-                                        
+                          
                                     </Style>
                                 </ContentPresenter.Resources>
                             </ContentPresenter>
@@ -293,7 +293,6 @@
                                 </ContentPresenter.Resources>    
                             </ContentPresenter>
                         </TextBlock>
-
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
